trunk/Archive2/1a/88958938ca4c8d/output
main.cpp:8:7: error: variable type 'D' is an abstract class
    D d;
      ^
main.cpp:2:18: note: unimplemented pure virtual method 'f' in 'D'
    virtual void f() = 0;
                 ^
1 error generated.
