trunk/Archive2/1a/88958938ca4c8d/main.cpp
struct B {
    virtual void f() = 0;
};

struct D : B { };
 
int main() {
    D d;
}
 
